tests/bad/enum-mismatch.pas
program enum_mismatch;

type
    Color = (Red, Green);
    State = (Off, On);

var
    c: Color;

begin
    c := On
end.
